--- a/Labo2/Opdracht 9/index.html
+++ b/Labo2/Opdracht 9/index.html
@@ -13,6 +13,6 @@
 <h6>Heading 6 (h6)</h6>
 
 <!-- Link back to HTM0L Dog: -->
-<p><img src="http://www.htmldog.com/badge1.gif" alt="HTML Dog"></img></p>
+<p><img src="download.png" height="195" width="258"/></p>
 </body>
 </html>
