--- a/Labo 3/index.html
+++ b/Labo 3/index.html
@@ -11,7 +11,7 @@
 <section>
   <h2>Eerste Semester</h2>
   <ul>
-    <li><a href="./_Personal%20homepage%20assignment">Homepage</a></li>
+    <li><a href="./_Personal homepage assigment">Homepage</a></li>
     <li><a href="./Contactinformation">Contactinformation</a></li>
     <li><a href="./Opleidingsaanbod">Opleidingsaanbod</a></li>
     <li><a href="/index.html">Back</a></li>
