--- a/labo2/index.html
+++ b/labo2/index.html
@@ -11,11 +11,11 @@
 <section>
   <h2>Eerste Semester</h2>
   <ul>
-    <li><a href="./opdracht 2">Opdracht 2</a></li>
+    <li><a href="./opdracht2">Opdracht 2</a></li>
     <li><a href="./opdracht5">Opdracht 5</a></li>
-    <li><a href="./Opdracht 8">Opleidingsaanbod</a></li>
-    <li><a href="./Opdracht 9">Opleidingsaanbod</a></li>
-    <li><a href="./Opdracht 8">Opleidingsaanbod</a></li>
+    <li><a href="./opdracht8">Opleidingsaanbod</a></li>
+    <li><a href="./opdracht9">Opleidingsaanbod</a></li>
+    <li><a href="./opdracht10">Opleidingsaanbod</a></li>
     <li><a href="/index.html">Back</a></li>
 
   </ul>
