--- a/labo2/index.html
+++ b/labo2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>labo 3</title>
+  <title>labo 2</title>
 </head>
 <body>
 <header>
@@ -11,12 +11,12 @@
 <section>
   <h2>Eerste Semester</h2>
   <ul>
-    <li><a href="./opdracht2">Opdracht 2</a></li>
-    <li><a href="./opdracht5">Opdracht 5</a></li>
-    <li><a href="./opdracht8">Opleidingsaanbod</a></li>
-    <li><a href="./opdracht9">Opleidingsaanbod</a></li>
-    <li><a href="./opdracht10">Opleidingsaanbod</a></li>
-    <li><a href="/index.html">Back</a></li>
+    <li><a href="./opdracht2/index.html">Opdracht 2</a></li>
+    <li><a href="./opdracht5/index.html">Opdracht 5</a></li>
+    <li><a href="./opdracht8/index.html">Opleidingsaanbod</a></li>
+    <li><a href="./opdracht9/index.html">Opleidingsaanbod</a></li>
+    <li><a href="./opdracht10/index.html">Opleidingsaanbod</a></li>
+    <li><a href="/index.html/index.html">Back</a></li>
 
   </ul>
 </section>
