--- a/labo3/index.html
+++ b/labo3/index.html
@@ -11,9 +11,10 @@
 <section>
   <h2>Eerste Semester</h2>
   <ul>
-    <li><a href="./_Personal homepage assigment/index.html">Homepage</a></li>
-    <li><a href="./Contactinformation/index.html">Contactinformation</a></li>
-    <li><a href="./Opleidingsaanbod/index.html">Opleidingsaanbod</a></li>
+    <li><a href="./personal homepage assigment/index.html">Homepage</a></li>
+    <li><a href="./contactinformation/index.html">Contactinformation</a></li>
+    <li><a href="./opleidingsaanbod/index.html">Opleidingsaanbod</a></li>
+    <li><a href="./personal homepage assigment kopie/index.html">Homepage</a></li>
     <li><a href="/index.html">Back</a></li>
 
   </ul>
