--- a/labo2/index.html
+++ b/labo2/index.html
@@ -13,9 +13,9 @@
   <ul>
     <li><a href="./opdracht2/index.html">Opdracht 2</a></li>
     <li><a href="./opdracht5/index.html">Opdracht 5</a></li>
-    <li><a href="./opdracht8/index.html">Opleidingsaanbod</a></li>
-    <li><a href="./opdracht9/index.html">Opleidingsaanbod</a></li>
-    <li><a href="./opdracht10/index.html">Opleidingsaanbod</a></li>
+    <li><a href="./opdracht8/index.html">Opdracht 8</a></li>
+    <li><a href="./opdracht9/index.html">Opdracht 9</a></li>
+    <li><a href="./opdracht10/index.html">Opdracht 10</a></li>
     <li><a href="/index.html/index.html">Back</a></li>
 
   </ul>
