--- a/labo3/index.html
+++ b/labo3/index.html
@@ -11,10 +11,10 @@
 <section>
   <h2>Eerste Semester</h2>
   <ul>
-    <li><a href="./personal homepage assigment/index.html">Homepage</a></li>
+    <li><a href="./personalhomepageassigment/index.html">Homepage</a></li>
     <li><a href="./contactinformation/index.html">Contactinformation</a></li>
     <li><a href="./opleidingsaanbod/index.html">Opleidingsaanbod</a></li>
-    <li><a href="./personal homepage assigment kopie/index.html">Homepage</a></li>
+    <li><a href="./personalhomepageassigmentkopie/index.html">Homepage kopie</a></li>
     <li><a href="/index.html">Back</a></li>
 
   </ul>
