--- a/labo2/index.html
+++ b/labo2/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-  <h1>Labo 3</h1>
+  <h1>Labo 2</h1>
 </header>
 <section>
   <h2>Eerste Semester</h2>
@@ -16,7 +16,7 @@
     <li><a href="./opdracht8/index.html">Opdracht 8</a></li>
     <li><a href="./opdracht9/index.html">Opdracht 9</a></li>
     <li><a href="./opdracht10/index.html">Opdracht 10</a></li>
-    <li><a href="/index.html">Back</a></li>
+    <li><a href="./index.html">Back</a></li>
 
   </ul>
 </section>
