--- a/labo5/index.html
+++ b/labo5/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>labo 4</title>
+  <title>labo 5</title>
 </head>
 <body>
 <header>
-  <h1>Labo 4</h1>
+  <h1>Labo 5</h1>
 </header>
 <section>
   <h2>Eerste Semester</h2>
   <ul>
 
-    <li><a href="./opdracht5/index.html">Homepage (opdracht 5)</a></li>
+    <li><a href="./opdracht6/index.html">Opdracht 6</a></li>
+    <li><a href="./opdracht7/index.html">Opdracht 7</a></li>
     <li><a href="/index.html">Back</a></li>
 
   </ul>
 </section>
 </body>
 </html>
+
