--- a/labo3/contactinformation/index.html
+++ b/labo3/contactinformation/index.html
@@ -7,9 +7,9 @@
 <body>
 <h2>Hoe bereikt u ons?</h2>
 <table border="1">
+    <thead>
     <tr>
-        <thead>
-        <th colspan="2">Campus</thcolspan>
+        <th colspan="2">Campus</th>
         <th>Studie gebieden</th>
         <th>GSM nummer</th>
         <th>Fax</th>
