--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a href="labo3/index.html">Labo 3</a></li>
     <li><a href="labo4/index.html">Labo 4</a></li>
     <li><a href="labo5/index.html">Labo 5</a></li>
-    <li><a href="Labo6/index.html">Labo 6</a></li>
+    <li><a href="labo6/index.html">Labo 6</a></li>
     <li><a href="Labo7/index.html">Labo 7</a></li>
     <li><a href="Labo8/index.html">Labo 8</a></li>
     <li><a href="Labo9/Index.html">Labo 9</a></li>
