--- a/labo9/index.html
+++ b/labo9/index.html
@@ -13,7 +13,7 @@
   <h2>Eerste Semester</h2>
   <ul>
     <li><a href="./opdracht%20Airbus/opdracht%20Airbus/airbus.html">Opdracht "Airbus"</a></li>
-    <li><a href="./positioneren_image_begin/positioneren_image_begin/index.html">Opdracht "Positioneren image"</a></li>
+    <li><a href="positioneren_image_begin/index.html">Opdracht "Positioneren image"</a></li>
     <li><a href="/index.html">Back</a></li>
 
   </ul>
