--- a/labo10/Demo/Demo-responsive-studenten/Demo-responsive-studenten/Bootstrap/index.html
+++ b/labo10/Demo/Demo-responsive-studenten/Demo-responsive-studenten/Bootstrap/index.html
@@ -18,8 +18,8 @@
         </header>
     </div>
     <div class="row">
-        <section  class="col-nd-9" id = "left"></section>
-        <section  class="col-nd-3" id = "right"></section>
+        <section  class="col-nd-9" id = "left">1</section>
+        <section  class="col-nd-3" id = "right">2</section>
     </div>
      <div class="row">
         <footer >
